--- a/app/components/footer/footer.pug
+++ b/app/components/footer/footer.pug
@@ -4,7 +4,7 @@ mixin footer()
       +e.top
         +e.logo
           +logo-image._footer
-          +e.info(data-slot-id="footer-contacts" data-slot-res="md")
+          +e.info(data-slot-id="footer-contacts" data-slot-res="bg")
         +e.navigation
           +nav-list(getData('footer-menu-1.json'))._small.__list
           +nav-list(getData('footer-menu-2.json'))._small.__list
