--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -33,7 +33,7 @@ block content
     .container
       +section-header._location
         +e.header-content
-          +e.location-top(data-slot-id="location-clear" data-slot-res="lg")
+          +e.location-top(data-slot-id="location-clear" data-slot-res="bg")
             +section-title('h2') Locations
           +e.location-bottom
             +filter.hide-sm(data-slot-id="location-clear" data-slot-res="xl")
