--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -18,6 +18,7 @@ $grid-gap-vertical-big: 60px;
 $grid-col-width: $grid-container-width/$grid-cols; // Ширина одной колонки
 $breakpoints: ('xl': 1700px,
 'lg': 1300px,
+'bg': 1160px,
 'md': 1020px,
 'sm': 768px,
 'xs': 480px);
