--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -227,7 +227,9 @@
       margin-bottom: 120px;
 
       @include screen('lg') {
-        margin-bottom: 118px;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        margin-bottom: 67px;
       }
 
       @include screen('md') {
@@ -383,7 +385,9 @@
       justify-content: flex-start;
       align-items: flex-start;
       min-height: 470px;
-      padding: 105px 136px 28px;
+      padding: 105px 50px 28px;
+      max-width: 1448px;
+      margin: 0 auto;
       z-index: 2;
 
       @include screen('lg') {
@@ -400,10 +404,12 @@
     }
 
     #{$b}_lead & {
-      padding: 124px 136px 28px;
+      padding: 124px 50px 28px;
+      max-width: 1448px;
+      margin: 0 auto;
 
       @include screen('lg') {
-        padding: 124px 56px 28px 65px;
+        padding: 124px 50px 28px 65px;
       }
 
       @include screen('md') {
@@ -420,15 +426,26 @@
     display: block;
     box-sizing: border-box;
 
+    @include screen('lg') {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-wrap: wrap;
+    }
+
     &_left {
       width: 41%;
       padding-right: 45px;
 
       @include screen('lg') {
-        width: 49.3%;
+        width: auto;
+        flex: 1;
+        min-width: 460px;
+        margin-bottom: 51px;
       }
 
       @include screen('md') {
+        flex: none;
         width: 100%;
         padding-right: 0;
         margin-bottom: 51px;
@@ -443,11 +460,14 @@
       width: 59%;
 
       @include screen('lg') {
-        width: 50.7%;
+        width: auto;
+        flex: 1;
+        min-width: 550px;
       }
 
       @include screen('md') {
         width: 100%;
+        flex: none;
       }
     }
   }
@@ -507,7 +527,7 @@
     &-top {
       margin-right: 50px;
 
-      @include screen('md') {
+      @include screen('bg') {
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -524,7 +544,7 @@
     &-bottom {
       flex: 1;
 
-      @include screen('md') {
+      @include screen('bg') {
         flex: none;
         width: 100%;
       }
