--- a/app/blocks/scroll-form/scroll-form.pug
+++ b/app/blocks/scroll-form/scroll-form.pug
@@ -9,6 +9,6 @@ mixin scroll-form()
       +e.P.text Including VAT and Service Fee
       +input-number('count').__counter
       +e.buttons
-        +button('button')(type="button")._wide.__button Request Reservation
-        +button('button')(type="button")._border._border_bg-white._wide.__button Arrange a Viewing
+        +button('button')(type="button")._short.__button Request Reservation
+        +button('button')(type="button")._border._border_bg-white._short.__button Arrange a Viewing
       +e.P.note <i>* </i> Utility bills and other services are paid separately
