--- a/app/components/lead/lead.pug
+++ b/app/components/lead/lead.pug
@@ -2,7 +2,7 @@ mixin lead()
   +b.SECTION.lead&attributes(attributes)
     .container
       +e.content
-        +e.side.hide-sm(data-slot-id='leadtop leadbottom' data-slot-res='lg')
+        +e.side.hide-sm(data-slot-id='leadtop leadbottom' data-slot-res='xl')
           +e.top(data-target-slot='leadtop')
             +e.info
               +address-list.__address
