--- a/app/components/lead/lead.scss
+++ b/app/components/lead/lead.scss
@@ -23,6 +23,10 @@
       width: 34.8%;
     }
 
+    @include screen('bg') {
+      width: 40%;
+    }
+
     @include screen('md') {
       width: 100%;
     }
@@ -34,6 +38,10 @@
 
     @include screen('lg') {
       width: 65.2%;
+    }
+
+    @include screen('bg') {
+      width: 60%;
     }
 
     @include screen('md') {
@@ -48,10 +56,10 @@
   &__top {
     box-sizing: border-box;
     width: 100%;
-    padding: 55px 67px;
+    padding: 55px 12%;
 
     @include screen('lg') {
-      padding: 37px 40px 0 46px;
+      padding: 37px 11% 0;
       margin-bottom: 42px;
     }
 
@@ -73,10 +81,10 @@
     justify-content: flex-start;
     box-sizing: border-box;
     width: 100%;
-    padding: 0 67px 50px;
+    padding: 0 12% 50px;
 
     @include screen('lg') {
-      padding: 0 40px 50px 46px;
+      padding: 0 11% 50px;
       flex: 1;
       justify-content: space-between;
     }
