--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -49,7 +49,8 @@
     box-sizing: border-box;
 
     &_main {
-      flex: 1;
+      width: 65.5%;
+      // flex: 1;
       box-sizing: border-box;
       padding-right: 50px;
       padding-top: 26px;
@@ -106,8 +107,8 @@
     }
 
     &_aside {
-      width: 368px;
-      min-width: 368px;
+      width: 34.5%; // width: 368px;
+      // min-width: 368px;
 
       #{$b}_reverse & {
         min-width: 0;
