fixes my rental offers and account setting for new breakpoints

--- a/app/components/space-offer/space-offer.scss
+++ b/app/components/space-offer/space-offer.scss
@@ -380,6 +380,7 @@
     .button {
       margin-left: auto;
       min-width: 140px;
+      flex: 1;
 
       @include screen('md') {
         margin-left: 0;
@@ -390,10 +391,11 @@
 
   &__list {
     width: auto;
-    flex: 1;
+    flex: 5;
     box-sizing: border-box;
     padding: 8px 25px 7px 50px;
     min-height: 40px;
+    min-width: 660px;
 
     @include screen('md') {
       width: 100%;
