--- a/app/pages/host-spaces/host-spaces.pug
+++ b/app/pages/host-spaces/host-spaces.pug
@@ -28,7 +28,7 @@ block content
             +space-offer(class=item.status)
               +space-offer-side.hide-md(data-slot-id=item.id data-slot-res="xl")
               +space-offer-content
-                +e.media-wrapper_lg.hide-from-md.hide-sm(data-slot-id=item.id data-slot-res="lg")
+                +e.media-wrapper_lg.hide-from-md.hide-sm(data-slot-id=item.id data-slot-res="md")
                 +e.describe
                   +space-offer-info
                     if item.offerBoxes
