--- a/app/components/side-navigation/side-navigation.scss
+++ b/app/components/side-navigation/side-navigation.scss
@@ -3,8 +3,13 @@
 
   display: block;
   width: 100%;
-  padding: 50px 64px 49px;
+  padding: 50px 17% 49px;
   box-sizing: border-box;
+
+  @include screen('xl') {
+    padding-left: 12%;
+    padding-right: 12%;
+  }
 
   &__navigation {
 
