--- a/app/blocks/breadcrumbs/breadcrumbs.scss
+++ b/app/blocks/breadcrumbs/breadcrumbs.scss
@@ -4,6 +4,8 @@
   display: flex;
   align-items: center;
 
+  @include ellipsis(100%);
+
   &__item {
     display: inline-block;
     position: relative;
@@ -29,6 +31,7 @@
     }
 
     &:last-child {
+      @include ellipsis(100%);
 
       #{$b}__link {
         @include link-disabled;
