--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -11,6 +11,7 @@ include ../blocks/breadcrumbs/breadcrumbs
 include ../blocks/burger/burger
 include ../blocks/button-heart/button-heart
 include ../blocks/button/button
+include ../blocks/category-filter/category-filter
 include ../blocks/close/close
 include ../blocks/content-zone/content-zone
 include ../blocks/divider/divider
