--- a/app/pages/blog/blog.pug
+++ b/app/pages/blog/blog.pug
@@ -13,7 +13,7 @@ block content
           +grid.grid_layout.grid_blog
             each news in blogNews
               +col({xl: 6, sm: 12})
-                +blog-news(news)(href="#")
+                +blog-news(news)(href="blog-article.html")
           +pagination
         +col({ xl: 1, md:12}).hide-md
 
