--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -15,6 +15,7 @@ block content
         +link(href="host-space-offers.html") My rental offers - One Space (HOST) (host-space-offers.html)
         +link(href="blog.html") Blog (blog.html)
         +link(href="blog-article.html") Blog article (blog-article.html)
+        +link(href="favourites.html") Favourites IN PROGRESS(favourites.html)
 
 block panels
   +main-menu
