--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -95,6 +95,7 @@ $color-news-bg: #252b34;
 $color-news-hover-title: #181f28;
 $color-news-hover-text: #0a0d11;
 $color-pagination-disabled: #ccd2d9;
+$color-radio-dark-hover: #2c3542;
 
 // ##########
 // Transitions
