fixes for blog article page and style for desktop and tablet version favorites

--- a/app/blocks/category-filter/category-filter.pug
+++ b/app/blocks/category-filter/category-filter.pug
@@ -1,7 +1,7 @@
 mixin category-filter()
   +b.FORM.category-filter&attributes(attributes)
-    +color-radio('category', 'all', 'checked')._dark._full Spaces
-    +color-radio('category', 'all')._dark._orange Hot Desk
-    +color-radio('category', 'all')._dark._red Dedicated Desk
-    +color-radio('category', 'all')._dark._blue Meeting Room
-    +color-radio('category', 'all')._dark._green Office Space
+    +color-radio('category', 'all', 'checked')._dark._full.__item Spaces
+    +color-radio('category', 'all')._dark._orange.__item Hot Desk
+    +color-radio('category', 'all')._dark._red.__item Dedicated Desk
+    +color-radio('category', 'all')._dark._blue.__item Meeting Room
+    +color-radio('category', 'all')._dark._green.__item Office Space
