--- a/app/blocks/category-filter/category-filter.scss
+++ b/app/blocks/category-filter/category-filter.scss
@@ -1,3 +1,23 @@
 .category-filter {
   $b: &;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  @include screen('md') {
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  &__item {
+
+    &:not(:first-child) {
+      margin-left: 31px;
+
+      @include screen('md') {
+        margin-left: 10px;
+      }
+    }
+  }
 }
