--- a/app/components/page-header/page-header.scss
+++ b/app/components/page-header/page-header.scss
@@ -193,4 +193,25 @@
       margin-right: 30px;
     }
   }
+
+  &__filters {
+    display: block;
+    margin-left: auto;
+    align-self: baseline;
+
+    @include screen('md') {
+      margin-left: 0;
+      align-self: auto;
+      width: 100%;
+      margin-top: 25px;
+    }
+
+    .category-filter {
+      margin-right: -8px;
+
+      @include screen('md') {
+        margin-right: 0;
+      }
+    }
+  }
 }
