--- a/app/pages/blog-article/blog-article.pug
+++ b/app/pages/blog-article/blog-article.pug
@@ -7,16 +7,16 @@ block content
   +page-header._wide-lg._spad
     .container
       +grid.grid_layout
-        +col({ md:12, xl: 2})
+        +col({ lg:12, xl: 2})
           +link-icon('select-arrow')._back._bold.__back(href="#") Back to blog
-        +col({ md:12, xl: 8}).hide-md
+        +col({ lg:12, xl: 8}).hide-lg
           +breadcrumbs(['Home', 'Blog', 'Space Pool hosts have a little more to think about when considering office improvement projects'])
-        +col({ md:12, xl: 2}).hide-md
+        +col({ lg:12, xl: 2}).hide-lg
   +content-origin._reverse._last
     .container
       +grid.grid_layout
-        +col({ md:12, xl: 2}).hide-md
-        +col({ md:12, xl: 8})
+        +col({ lg:12, xl: 2}).hide-lg
+        +col({ lg:12, xl: 8})
           +article
             +content-zone
               time(datetime="2018-12-04") December 4, 2018
@@ -32,7 +32,7 @@ block content
               p In my last business, we held the largest ever crowdfunding round for a startup, so it was a pretty instinctive to use the same method. I tested the idea with charities and people thought it was interesting – it hadn’t been done anywhere in the world yet, so we said “Okay! Let’s launch it right here in London.”
               p Our first member was a guy called Tony, who was living in a homeless hostel in South London. He wanted to be an electrician but couldn’t afford the training and had hit a wall. When I told him he could be the first person on the platform he was evidently very nervous, and only had one thing to ask: why would anyone actually help him? I told him that I thought they would because they care. He wasn’t convinced, but we gave it a go. It turns out people do care and before we know it, he’s one of the main stories on Sky and BBC News. He’s got a big splash on Time Out, Reuters, Evening Standard, Vanessa Feltz, LBC…
               p Five months down the line, he qualified and made it into stable work as an electrician. Now for the first time in twenty-odd years, he’s in employment, and about to move into his own place for the first time in two decades. The model is working incredibly well. More than 90% of
-        +col({ md:12, xl: 2}).hide-md
+        +col({ lg:12, xl: 2}).hide-lg
 
 block panels
   +main-menu
