--- a/app/pages/favourites/favourites.pug
+++ b/app/pages/favourites/favourites.pug
@@ -14,7 +14,8 @@ block content
         +page-header-side
         +page-header-main
           +page-title('h1')._small.__title Favourites
-          +category-filter
+          +e.filters
+            +category-filter
   +content-origin._reverse._last
     .container
       +e.wrapper
