add popup signin

--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -265,6 +265,27 @@
     }
   }
 
+  &__bottom {
+    display: block;
+    width: 100%;
+
+    &:not(:first-child) {
+      margin-top: 40px;
+    }
+
+    .link {
+      @include text-big;
+
+      line-height: 1.2;
+
+      @include screen('sm') {
+        @include text15;
+
+        line-height: 1.2;
+      }
+    }
+  }
+
   &_pb {
     padding-bottom: 104px;
 
