--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -58,6 +58,7 @@ include ../blocks/section/section
 include ../blocks/short-profile/short-profile
 include ../blocks/sidebar/sidebar
 include ../blocks/slider/slider
+include ../blocks/social-button/social-button
 include ../blocks/social/social
 include ../blocks/socials/socials
 include ../blocks/space/space
@@ -87,6 +88,7 @@ include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
 include ../components/page-header/page-header
 include ../components/popup-add-offer/popup-add-offer
+include ../components/popup-signin/popup-signin
 include ../components/side-navigation/side-navigation
 include ../components/space-info/space-info
 include ../components/space-offer/space-offer
