--- a/app/pages/favourites/favourites.pug
+++ b/app/pages/favourites/favourites.pug
@@ -27,3 +27,7 @@ block content
             each item in spaces
               +col({xl: 4, md: 6 })
                 +space-favorites(item)
+
+block panels
+  +main-menu-inner
+    +nav-list(getData('main-menu-user.json'))
