--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -6,6 +6,7 @@ block head
 block content
   +b.sitemap
     .container
+      +page-title._small Страницы
       +e.list
         +link(href="ui-kit.html") UI-kit (ui-kit.html)
         +link(href="index.html") Main (index.html)
@@ -17,5 +18,13 @@ block content
         +link(href="blog-article.html") Blog article (blog-article.html)
         +link(href="favourites.html") Favourites IN PROGRESS(favourites.html)
 
+      +page-title._small Попапы
+      +e.list
+        +link(href="#popup-signin").js-popup Popup Sign In
+        +link(href="#popup-add-rental-offer").js-popup Popup Add rental offer
+
 block panels
   +main-menu
+
+block popups
+  +popup-add-offer#popup-add-rental-offer
