--- a/app/pages/sitemap/sitemap.scss
+++ b/app/pages/sitemap/sitemap.scss
@@ -5,11 +5,13 @@
   &__list {
     list-style: none;
 
+    &:not(:last-child) {
+      margin-bottom: 60px;
+    }
+
     a {
       display: block;
       width: 100%;
-
-      @include text;
 
       &:not(:last-child) {
         margin-bottom: 10px;
