--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -13,6 +13,16 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
   margin-right: -$grid-gap/2;
   margin-top: -$grid-gap-vertical;
 
+  &_mid {
+    margin-left: -15px;
+    margin-right: -15px;
+    margin-top: -30px;
+
+    @include screen('sm') {
+      margin-top: -10px;
+    }
+  }
+
   &_big {
     margin-left: -$grid-gap-big/2;
     margin-right: -$grid-gap-big/2;
@@ -134,6 +144,14 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
 
     #{$b}_no-top & {
       padding-top: 0;
+    }
+
+    #{$b}_mid & {
+      padding: 30px 15px 0;
+
+      @include screen('sm') {
+        padding-top: 10px;
+      }
     }
   }
 }
