--- a/app/blocks/header-menu/header-menu.pug
+++ b/app/blocks/header-menu/header-menu.pug
@@ -7,4 +7,4 @@ mixin header-menu()
     +e.LI.item
       +link(href="#") Sign Up
     +e.LI.item
-      +link(href="#") Sign In
+      +link(href="#popup-signin").js-popup Sign In
