--- a/app/blocks/nav-list/nav-list.pug
+++ b/app/blocks/nav-list/nav-list.pug
@@ -1,8 +1,9 @@
 mixin nav-list(data)
   +b.UL.nav-list&attributes(attributes)
     each item in data
+      - var itemClass = item.class || "";
       +e.LI.item
-        +link()(href=item.href)!= item.name
+        +link()(href=item.href class=itemClass)!= item.name
 
 
 mixin nav-list-sidebar(data, active)
@@ -10,7 +11,8 @@ mixin nav-list-sidebar(data, active)
   +b.UL.nav-list_sidebar&attributes(attributes)
     each item in data
       - if (item.name === active) { addClass = " is-active"; } else { addClass=""; }
+      - var itemClass = item.class || "";
       +e.LI.item
-        +link()(href=item.href class='_white' + addClass)!= item.name
+        +link()(href=item.href class='_white' + addClass + itemClass)!= item.name
         if item.marker
           +e.marker!= item.marker
