--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -96,6 +96,7 @@ $color-news-hover-title: #181f28;
 $color-news-hover-text: #0a0d11;
 $color-pagination-disabled: #ccd2d9;
 $color-radio-dark-hover: #2c3542;
+$color-fb: #4a6790;
 
 // ##########
 // Transitions
