start page Messages

--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -295,6 +295,12 @@
     &-content {
       width: 100%;
     }
+
+    &_flex {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+    }
   }
 
   &__footer {
