--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -78,6 +78,7 @@ include ../components/breadcrumbs-box/breadcrumbs-box
 include ../components/compact-filter/compact-filter
 include ../components/condition-search/condition-search
 include ../components/content/content
+include ../components/conversation/conversation
 include ../components/facilities/facilities
 include ../components/filter/filter
 include ../components/footer/footer
