--- a/app/blocks/table-head/table-head.scss
+++ b/app/blocks/table-head/table-head.scss
@@ -25,4 +25,30 @@
   .boxes:not(:first-child) {
     margin-left: 17px;
   }
+
+  &_messages {
+    width: 100%;
+
+    #{$b} {
+
+      &__wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+      }
+
+      &__cell {
+        box-sizing: border-box;
+        padding: 16px 20px 16px 0;
+
+        &_sub {
+          width: 47%;
+        }
+
+        &_messages {
+          flex: 1;
+        }
+      }
+    }
+  }
 }
