--- a/app/blocks/pagination/pagination.scss
+++ b/app/blocks/pagination/pagination.scss
@@ -13,6 +13,14 @@
     }
   }
 
+  &_negative-mgt:not(:first-child) {
+    margin-top: -28px;
+
+    @include screen('sm') {
+      margin-top: -30px;
+    }
+  }
+
   &__item {
     display: block;
     box-sizing: border-box;
