--- a/app/blocks/short-profile/short-profile.scss
+++ b/app/blocks/short-profile/short-profile.scss
@@ -14,6 +14,12 @@
     @include screen('sm') {
       margin-right: 0;
     }
+
+    #{$b}_full & {
+      @include screen('sm') {
+        margin-right: 10px;
+      }
+    }
   }
 
   &__name {
@@ -22,9 +28,19 @@
     font-weight: 700;
     color: $color-basic;
     transition: color $ease-main;
+    white-space: nowrap;
 
     @include screen('sm') {
       display: none;
+    }
+
+    #{$b}_full & {
+      @include screen('sm') {
+        @include text;
+
+        line-height: (26/14);
+        display: inline-block;
+      }
     }
   }
 
