--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -1,5 +1,6 @@
 include ../blocks/accordion/accordion
 include ../blocks/add-button/add-button
+include ../blocks/address-line/address-line
 include ../blocks/address-list/address-list
 include ../blocks/article/article
 include ../blocks/avatar/avatar
@@ -8,10 +9,12 @@ include ../blocks/blog/blog
 include ../blocks/box/box
 include ../blocks/boxes/boxes
 include ../blocks/breadcrumbs/breadcrumbs
+include ../blocks/bubble/bubble
 include ../blocks/burger/burger
 include ../blocks/button-heart/button-heart
 include ../blocks/button/button
 include ../blocks/category-filter/category-filter
+include ../blocks/characteristics-table/characteristics-table
 include ../blocks/close/close
 include ../blocks/content-zone/content-zone
 include ../blocks/divider/divider
@@ -36,6 +39,8 @@ include ../blocks/link/link
 include ../blocks/lists/lists
 include ../blocks/logo/logo
 include ../blocks/map/map
+include ../blocks/message-count/message-count
+include ../blocks/message/message
 include ../blocks/nav-list/nav-list
 include ../blocks/news/news
 include ../blocks/note/note
@@ -61,6 +66,8 @@ include ../blocks/slider/slider
 include ../blocks/social-button/social-button
 include ../blocks/social/social
 include ../blocks/socials/socials
+include ../blocks/space-description/space-description
+include ../blocks/space-reservation/space-reservation
 include ../blocks/space/space
 include ../blocks/spoiler/spoiler
 include ../blocks/status/status
