--- a/app/pages/messages/messages.pug
+++ b/app/pages/messages/messages.pug
@@ -7,14 +7,16 @@ block header
   -var headerClass = '_border'
 
 block content
-  +content-origin._reverse
+  -var messages = getData('messages-new.json');
+  -var historyMessages = getData('messages-old.json');
+  +content-origin._reverse._last
     .container
       +e.wrapper
         +content-column-aside._ptop.hide-lg
           +side-navigation('Conversation available only with booked space managers')
             +nav-list-sidebar(getData('side-menu-user.json'), 'Messages').__navigation
         +content-column-main
-          +section._inner
+          +section._inner._inner_gmg
             +section-header._flex
               +section-title('h3') Unread messages
               +indicator 3
@@ -26,7 +28,27 @@ block content
                   +e.cell_msgs
                     +e.name Messages
                   +divider
-          +section._inner
+              each message in messages
+                +conversation
+                  +conversation-subject
+                    +space-description
+                      +space-description-image(message.space.image)
+                      +space-description-content
+                        +space-description-address
+                          +address-line(message.space.address)
+                        +space-description-title!= message.space.title
+                        +space-description-boxes
+                          +box._size10._orange
+                          +box._size10._red
+                          +box._size10._blue
+                          +box._size10._green
+                        +space-description-table
+                  +conversation-message
+                    +message
+                      +message-header(message.count)
+                        +short-profile-origin(message.interlocuter.img, message.interlocuter.name, 'div')
+                      +message-content._bold!= message.text
+          +section._inner._inner_gmg
             +section-header
               +section-title('h3') Message history
             +section-content
@@ -37,6 +59,27 @@ block content
                   +e.cell_msgs
                     +e.name Messages
                   +divider
+              each message in historyMessages
+                +conversation
+                  +conversation-subject
+                    +space-description
+                      +space-description-image(message.space.image)
+                      +space-description-content
+                        +space-description-address
+                          +address-line(message.space.address)
+                        +space-description-title!= message.space.title
+                        +space-description-boxes
+                          +box._size10._orange
+                          +box._size10._red
+                          +box._size10._blue
+                          +box._size10._green
+                        +space-description-table
+                  +conversation-message
+                    +message
+                      +message-header(message.count)
+                        +short-profile-origin(message.interlocuter.img, message.interlocuter.name, 'div')
+                      +message-content!= message.text
+          +pagination._negative-mgt
 block panels
   +main-menu-inner
     +nav-list(getData('main-menu-user.json'))
