--- a/app/blocks/characteristics-table/characteristics-table.scss
+++ b/app/blocks/characteristics-table/characteristics-table.scss
@@ -12,15 +12,22 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      width: 100%;
 
       &:last-child {
         border-bottom: none;
-        text-align: right;
       }
     }
 
     td {
+      display: block;
       white-space: nowrap;
+      text-align: left;
+
+      &:last-child {
+        flex: 1;
+        text-align: right;
+      }
 
       &:not(:last-child) {
         padding-right: 10px;
