--- a/app/blocks/table-head/table-head.scss
+++ b/app/blocks/table-head/table-head.scss
@@ -26,6 +26,20 @@
     margin-left: 17px;
   }
 
+  .short-profile {
+    &:not(:first-child) {
+      margin-left: 13px;
+    }
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+
+  .conversation-info {
+    margin-left: auto;
+  }
+
   &_messages {
     width: 100%;
 
