--- a/app/components/page-header/page-header.scss
+++ b/app/components/page-header/page-header.scss
@@ -23,6 +23,18 @@
     }
   }
 
+  &_bpad {
+    padding: 43px 0 40px;
+
+    @include screen('md') {
+      padding: 34px 0 30px;
+    }
+
+    @include screen('sm') {
+      padding: 19px 0;
+    }
+  }
+
   .container {
     display: block;
   }
@@ -185,6 +197,11 @@
       @include heading-6;
 
       line-height: (26/15);
+    }
+
+    .link__text {
+      display: inline-flex;
+      align-items: center;
     }
   }
 
