--- a/app/pages/messages/messages.pug
+++ b/app/pages/messages/messages.pug
@@ -29,7 +29,7 @@ block content
                     +e.name Messages
                   +divider
               each message in messages
-                +conversation
+                +conversation()(href="#")
                   +conversation-subject
                     +space-description
                       +space-description-image(message.space.image)
@@ -60,7 +60,7 @@ block content
                     +e.name Messages
                   +divider
               each message in historyMessages
-                +conversation
+                +conversation()(href="#")
                   +conversation-subject
                     +space-description
                       +space-description-image(message.space.image)
