--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -17,7 +17,8 @@ block content
         +link(href="blog.html") Blog (blog.html)
         +link(href="blog-article.html") Blog article (blog-article.html)
         +link(href="favourites.html") Favourites (Tablet & Desktop Ready, Mobile NOT READY) (favourites.html)
-        +link(href="messages.html") Messages IN PROGRESS (messages.html)
+        +link(href="messages.html") Messages (messages.html)
+        +link(href="conversation.html") Messages One Conversation IN PROGRESS (conversation.html)
 
       +page-title._small Попапы
       +e.list
